--- a/src/components/TagInput.css
+++ b/src/components/TagInput.css
@@ -31,6 +31,11 @@
   box-shadow: none !important;
 }
 
+.tag-input-wrapper input.form-control:focus {
+  outline: none;
+  box-shadow: none !important;
+}
+
 .tag-suggestions {
   max-height: 200px;
   overflow-y: auto;
